application_page paragraph text made into seperate lines to read easier

--- a/application_page.html
+++ b/application_page.html
@@ -4,16 +4,15 @@
 <body>
 
 <h1>Create an account to get R-Code</h1>
-<p>First Name
-   Last Name
-   Nickname
-   e-mail
-   re-enter e-mail
-   new password
-   gender (male, female, other)
-   picture(optional)
-   Date of birth
- </p>
+<p>First Name</p>
+<p>Last Name</p>
+<p>Nickname</p>
+<p>e-mail</p>
+<p>re-enter e-mail</p>
+<p>new password</p>
+<p>gender (male, female, other)</p>
+<p>picture(optional)</p>
+<p>Date of birth</p>
 
 
 </body>
