new changes for application_page

--- a/application_page.html
+++ b/application_page.html
@@ -20,14 +20,22 @@
 <body>
 
 <div class="container">
-    <h1>Create an account to get R-Code</h1>
+
+
+    <h1>CREATE AN ACCOUNT TO GET R-CODE</h1>
 
 <div class="panel panel-default">
   <div class="panel-body">
+      <div class='col-md-4'>
       First name:<br>
       <input type="text" id="firstname-input" name="firstname"></input><br>
       Last name:<br>
       <input type="text" id="lastname-input" name="lastname"></input><br>
+      E-mail:<br>
+      <input type="text" id="E-mail-input" name="E-mail"></input><br>
+      New password:<br>
+      <input type="text" id="New password-input" name="New password"></input><br>
+
       <input type="radio" name="gender" value="male"> Male</input><br>
       <input type="radio" name="gender" value="female"> Female</input><br>
       <input type="radio" name="gender" value="other"> Other</input><br>
@@ -37,12 +45,17 @@
     <p id="firstname"></p>
     <p>Last name</p>
     <p id="lastname"></p>
-    <p>e-mail</p>
-    <p>re-enter e-mail</p>
-    <p>new password</p>
-    <p>gender (male, female, other)</p>
-    <p>picture(optional)</p>
-    <p>Date of birth</p>
+    <p>E-mail</p>
+    <p id="e-mail"></p>
+    <p>New password</p>
+    <p id="new password"></p>
+    </div>
+
+<div class='col-md-8'>
+        <img src='https://damianbrandon.files.wordpress.com/2012/03/day-26.jpg'>
+
+</div>
+
   </div>
 </div>
 
