corrected the tittle

--- a/application_page.html
+++ b/application_page.html
@@ -22,7 +22,7 @@
 <div class="container">
 
 
-    <h1>CREATE AN ACCOUNT TO GET R-CODE</h1>
+    <h1>CREATE AN ACCOUNT TO GET QR-CODE</h1>
 
 <div class="panel panel-default">
   <div class="panel-body">
@@ -40,7 +40,7 @@
       <input type="radio" name="gender" value="female"> Female</input><br>
       <input type="radio" name="gender" value="other"> Other</input><br>
 
-    <button id='button'>Create an account to generate R-Code</button>
+    <button id='button'>GET THE QR-CODE</button>
     <p>First name</p>
     <p id="firstname"></p>
     <p>Last name</p>
