--- a/application_page.html
+++ b/application_page.html
@@ -22,11 +22,12 @@
 <div class="container">
 
 
-    <h1>CREATE AN ACCOUNT TO GET QR-CODE</h1>
+    <h1>CREATE AN ACCOUNT TO GET YOUR QR-CODE</h1>
 
 <div class="panel panel-default">
   <div class="panel-body">
-      <div class='col-md-4'>
+      <div class='col-md-3'>
+
       First name:<br>
       <input type="text" id="firstname-input" name="firstname"></input><br>
       Last name:<br>
@@ -51,7 +52,7 @@
     <p id="new password"></p>
     </div>
 
-<div class='col-md-8'>
+<div class='col-md-9'>
         <img src='https://damianbrandon.files.wordpress.com/2012/03/day-26.jpg'>
 
 </div>
