--- a/our_members.html
+++ b/our_members.html
@@ -1,22 +1,72 @@
 <!DOCTYPE html>
 <html>
-<title>OUR MEMBERS</title>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+<link rel="stylesheet" type="text/css" href="application_page.css">
+
+
+<head>
+<style>
+div.container {
+    width: 100%;
+    border: 1px solid gray;
+}
+
+header, footer {
+    padding: 1em;
+    color: white;
+    background-color: black;
+    clear: left;
+    text-align: center;
+}
+
+nav {
+    float: left;
+    max-width: 160px;
+    margin: 0;
+    padding: 1em;
+}
+
+nav ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+nav ul a {
+    text-decoration: none;
+}
+
+article {
+    margin-left: 170px;
+    border-left: 1px solid gray;
+    padding: 1em;
+    overflow: hidden;
+}
+</style>
+</head>
 <body>
+  <div class="container">
 
-<h1>MEET OUR MEMBERS</h1>
-<p>Nickname</p>
-<p>Picture</p>
-<p>Video</p>
+  <header>
+     <h1>MEET OUR MEMBERS</h1>
+  </header>
 
-<h2>BIO</h2>
+  <nav>
+    <ul>
+      <li><a href="#">Picture</a></li>
+      <li><a href="#">QR-CODE</a></li>
+    </ul>
+  </nav>
 
-<h3>Support</h3>
-<p>R-Code picture</p>
-<h4>GOALS</h4>
-<p>I am saving money for a guitar</p>
-<h5>PREVIOUS GOALS<h5>
-<p>With R-Code support I managed to but my first piano!</P>
-<p>piano picture</p>
+  <article>
+    <h1>Full Name</h1>
+    <p>BIO</p>
+  </article>
+
+  <footer>Copyright © W3Schools.com</footer>
+
+  </div>
+
 
 </body>
 </html>
