--- a/our_members.html
+++ b/our_members.html
@@ -2,49 +2,14 @@
 <html>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
-<link rel="stylesheet" type="text/css" href="application_page.css">
+<link rel="stylesheet" type="text/css" href="our_members.css">
 
 
 <head>
-<style>
-div.container {
-    width: 100%;
-    border: 1px solid gray;
-}
 
-header, footer {
-    padding: 1em;
-    color: white;
-    background-color: black;
-    clear: left;
-    text-align: center;
-}
-
-nav {
-    float: left;
-    max-width: 160px;
-    margin: 0;
-    padding: 1em;
-}
-
-nav ul {
-    list-style-type: none;
-    padding: 0;
-}
-
-nav ul a {
-    text-decoration: none;
-}
-
-article {
-    margin-left: 170px;
-    border-left: 1px solid gray;
-    padding: 1em;
-    overflow: hidden;
-}
-</style>
-</head>
 <body>
+  <div class="panel panel-default">
+    <div class="panel-body">
   <div class="container">
 
   <header>
@@ -64,9 +29,10 @@ article {
   </article>
 
   <footer>Copyright © W3Schools.com</footer>
-
+</div>
+</div>
   </div>
 
-
+</head>
 </body>
 </html>
