--- a/our_members.html
+++ b/our_members.html
@@ -5,7 +5,35 @@
 <link rel="stylesheet" type="text/css" href="our_members.css">
 
 <head>
+  <nav class="navbar navbar-light bg-faded">
+    <a class="navbar-brand" href="#">Mobile Money</a>
+    <ul class="nav navbar-nav">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">About Us</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">How It Works</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Apply</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Members</a>
+      </li>
 
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="http://example.com" id="supportedContentDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></a>
+
+      </li>
+    </ul>
+    <form class="form-inline float-xs-right">
+      <input class="form-control" type="text" placeholder="Search">
+      <button class="btn btn-outline-success" type="submit">Search</button>
+    </form>
+  </nav>
 
 
 <title>Our Members</title>
