--- a/our_members.html
+++ b/our_members.html
@@ -5,35 +5,7 @@
 <link rel="stylesheet" type="text/css" href="our_members.css">
 
 <head>
-  <nav class="navbar navbar-light bg-faded">
-    <a class="navbar-brand" href="#">Mobile Money</a>
-    <ul class="nav navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">About Us</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">How It Works</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Apply</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Members</a>
-      </li>
 
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="http://example.com" id="supportedContentDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></a>
-
-      </li>
-    </ul>
-    <form class="form-inline float-xs-right">
-      <input class="form-control" type="text" placeholder="Search">
-      <button class="btn btn-outline-success" type="submit">Search</button>
-    </form>
-  </nav>
 
 
 <title>Our Members</title>
@@ -41,6 +13,31 @@
 </head>
 
 <body>
+
+  <div id="wrapper">
+
+  <div id="header">
+  <nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+      <div class="navbar-header">
+      <a class="navbar-brand" href="#">Mobile Money</a>
+      </div>
+      <ul class="nav navbar-nav navbar-center">
+        <li class="active"><a href="index.html">Home</a></li>
+        <li><a href="About_us.html">About us</a></li>
+        <li><a href="index.html">How it works</a></li>
+        <li><a href="index.html">Members</a></li>
+
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+        <li><a href="login.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+      </ul>
+    </div>
+  </nav>
+  </div>
+
+
 
 <div class="container">
 
