--- a/how_it_works.html
+++ b/how_it_works.html
@@ -6,33 +6,28 @@
 
 	<link rel="stylesheet" href="how_it_works.css">
 
-<nav class="navbar navbar-light bg-faded">
-	<a class="navbar-brand" href="#">Mobile Money</a>
-	<ul class="nav navbar-nav">
-    <li class="nav-item active">
-      <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">About Us</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">How it Works</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">Apply</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">Members</a>
-    </li>
-    <li class="nav-item dropdown">
-      <a class="nav-link dropdown-toggle" href="http://example.com" id="supportedContentDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></a>
-    </li>
-  </ul>
-  <form class="form-inline float-xs-right">
-    <input class="form-control" type="text" placeholder="Search">
-    <button class="btn btn-outline-success" type="submit">Go!</button>
-  </form>
+<div id="wrapper">
+		
+<div id="header">
+<nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <div class="navbar-header">
+    <a class="navbar-brand" href="#">Mobile Money</a>
+    </div>
+    <ul class="nav navbar-nav navbar-center">
+      <li class="active"><a href="index.html">Home</a></li>
+      <li><a href="About_us.html">About us</a></li>
+      <li><a href="how_it_works">How it works</a></li>
+      <li><a href="index.html">Members</a></li>
+      
+    </ul>
+    <ul class="nav navbar-nav navbar-right">
+      <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+      <li><a href="login.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+    </ul>
+  </div>
 </nav>
+</div>
 
 	<div class='jumbotron text-center'>
 		<h1>What is Mobile Money?</h1>
