--- a/how_it_works.html
+++ b/how_it_works.html
@@ -16,9 +16,9 @@
     </div>
     <ul class="nav navbar-nav navbar-center">
       <li class="active"><a href="index.html">Home</a></li>
-      <li><a href="About_us.html">About us</a></li>
+      <li><a href="About_us">About us</a></li>
       <li><a href="how_it_works">How it works</a></li>
-      <li><a href="index.html">Members</a></li>
+      <li><a href="our_members">Members</a></li>
       
     </ul>
     <ul class="nav navbar-nav navbar-right">
