--- a/About_us.html
+++ b/About_us.html
@@ -20,12 +20,12 @@
     <ul class="nav navbar-nav navbar-center">
       <li class="active"><a href="index.html">Home</a></li>
       <li><a href="About_us.html">About us</a></li>
-      <li><a href="index.html">How it works</a></li>
-      <li><a href="index.html">Members</a></li>
+      <li><a href="how_it_works.html">How it works</a></li>
+      <li><a href="our_members.html">Members</a></li>
       
     </ul>
     <ul class="nav navbar-nav navbar-right">
-      <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+      <li><a href="application_page.html"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
       <li><a href="login.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
     </ul>
   </div>
@@ -49,7 +49,7 @@
       <div class="col-sm-4">
          <img class="img-circle" src="Angela.jpg" height="300" width="300">
         <blockquote><p class="lead">Angela.</p></blockquote>
-      <p>Angela is a jhkjashdfhsdfhsdflaksjdfk.asdf auhfkashkhas dfuhasd ifaushf as. </p>
+      <p>Angela is a recent graduate with a passion for social justice and the environment. Normally completely baffled by tech, she has loved learning to code and plans to continue learning to develop solutions for environmental issues. </p>
     </div>
     </div>
 
@@ -71,10 +71,14 @@
        </div>
 
 <div class="jumbotron">
+<div class="container">
+<div class="panel-body">
 			    			 <br>
 			            	<h2>What makes us Awesome?!</h2>
 	        			<p class="lead"> We are the only payments sytem that supports street entertainers. We work with our users and a proportion of the fee from our transactions goes to our siter charity "off the streets" where we help the homeless find work and to ,once again, become active members of society. So by joining and using our platform, you will be helping more than one person. </p>
 		          </div>
+              </div>
+              </div>
  
 <div id="footer">
 <div class="footer">
